--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         }
         canvas {
             background-color: #000;
+             width: 100%;
+            height: auto;
+            max-width: 400px;
+            max-height: 400px;
         }
     </style>
 </head>
